feat(microservices: Emiren): fixed the generator, added excel getter for all in sql.